--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     if(score>best){ best=score; localStorage.simple_best=best; bestEl.textContent=best; }
     setTimeout(start, 600);
   }
-
+   <!-- redeploy -->
   function update(dt){
     // speed (time-based acceleration + 1s ease-in + cap)
     tSinceStart += dt;
@@ -192,3 +192,4 @@
 </script>
 </body>
 </html>
+
